<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/telegram_menu"
        android:icon="@drawable/telegram"
        android:title="@string/telegram"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/linked_in_menu"
        android:icon="@drawable/linkedin"
        android:title="@string/linkedin"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/whats_app_menu"
        android:icon="@drawable/add"
        android:title="@string/whatsapp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gmail_menu"
        android:icon="@drawable/add"
        android:title="@string/gmail"
        app:showAsAction="ifRoom" />
</menu>