<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backDrop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BA2A5"
    tools:context=".interface.utils.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/photo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:backgroundTint="#9BA2A5"
            android:contentDescription="@string/cover_photo"
            android:scaleType="fitXY"
            android:src="@drawable/tech_background" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="409dp"
            android:layout_height="118dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="40sp"
            android:layout_marginRight="0dp"
            android:backgroundTint="#9BA2A5"
            android:src="@drawable/picture1"
            app:civ_border_color="#617A78"
            app:civ_border_width="5dp" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/photo_section"
        android:layout_marginTop="10dp"
        android:backgroundTint="#9BA2A5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#9BA2A5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:backgroundTint="#9BA2A5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    tools:text="@string/name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:text="@string/position"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/career_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#9BA2A5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#9BA2A5"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:text="@string/career_note"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/career_note_desc"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/work_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#9BA2A5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#9BA2A5"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:text="@string/work_experience"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_experience_desc"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add"
        android:src="@drawable/add"
        app:backgroundTint="#3F51B5" />

</RelativeLayout>